# phoenix-orch-00

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build_log.txt  build_output.txt  cypress.config.js  deny.toml  package-lock.json  test_commit.json  test_unknown.json  test_who.json
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  main.yml  security-audit.yml
agents/git_agent/: Cargo.toml
agents/git_agent/src/: main.rs  safe_paths.rs
agents/llm_router_agent/: Cargo.toml
agents/llm_router_agent/src/: main.rs
agents/obsidian_agent/: Cargo.toml
agents/obsidian_agent/src/: main.rs  safe_paths.rs
core/disaster-recovery/: Cargo.toml
core/disaster-recovery/src/: main.rs
core/health-validator/: Cargo.toml
core/health-validator/src/: main.rs
core/master_orchestrator/: Cargo.toml  check_output.txt  check_output_cmd.txt  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt
core/master_orchestrator/benches/: api_benchmarks.rs  memory_benchmarks.rs
core/master_orchestrator/src/: cache_service.rs  config_service.rs  executor.rs  lib.rs  main.rs  memory_service.rs  planner.rs  redis_service.rs  tool_registry_service.rs  tool_service.rs
core/master_orchestrator/src/api/: audit_middleware.rs  auth.rs  http.rs  mod.rs  rate_limit.rs  validation.rs  ws.rs
core/master_orchestrator/src/consciousness/: mod.rs
core/master_orchestrator/src/consciousness/evolution/: mod.rs  tracker.rs
core/master_orchestrator/src/consciousness/layers/: body.rs  creative.rs  heart.rs  mind.rs  mod.rs  social.rs  soul.rs  work.rs
core/master_orchestrator/src/consciousness/memory/: layered.rs  mod.rs
core/master_orchestrator/src/consciousness/personality/: mod.rs  traits.rs
core/master_orchestrator/src/consciousness/reasoning_streamer/: context.rs  mod.rs  profile.rs  streaming.rs
core/master_orchestrator/src/consciousness/synthesizer/: core.rs  mod.rs
core/master_orchestrator/src/memory/: io.rs  mod.rs  semantic.rs
core/master_orchestrator/tests/: ERROR_HANDLING.md  executor_error_handling.rs  process_error_handling.rs  smoke_chat_v1.rs
core/master_orchestrator/tests/mock_agents/: failing_agent.cmd  hanging_agent.cmd  success_agent.cmd
core/platform/: Cargo.toml
core/platform/src/: audit.rs  errors.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
core/rollback-controller/: Cargo.toml
core/rollback-controller/src/: main.rs
core/shared_types/: Cargo.toml
core/shared_types/src/: consciousness.rs  lib.rs
cypress/e2e/: core-functionality.cy.js
cypress/support/: commands.js
data/: config.dev.toml  config.prod.toml  config.staging.toml  config.toml
data/memory/text/: 05ded860-ef4e-433c-a5be-41bd4c1b7866.txt  0ab7f250-bbf0-41d0-ab67-d74c58c58841.txt  0b2cde94-ee01-4fb6-9812-b2514d881ebe.txt  1049a497-0927-4e0f-8f30-423b988f9d98.txt  2814e073-a7a3-4293-934f-4733c74f58d7.txt  34cff8ae-a53f-4a6c-8f43-901ddc4c2b60.txt  50706851-24cb-4f31-bcee-7511df5cca27.txt  5b2bc5cb-df49-46b8-a24d-0898d55a22b8.txt  642d99fd-6f42-49ca-8abf-4f01fb7e0800.txt  65ffdc81-6efb-45ba-a97c-4c0589408123.txt  67ae77f3-4e9e-4035-ae72-fd81a9a666e7.txt  7108899f-f9dc-471e-9de1-0abcb067e723.txt  746b0ba3-7174-4e40-b238-4c78d6a8bb3e.txt  76570dde-3691-47fc-95ad-5d731d12ec67.txt  79270d5e-bbed-4a76-a077-ab2e89bd5a66.txt  81dca0ef-5bcf-4a44-85ee-40fa8a63e7b4.txt  8b1651a1-2d21-4f97-b649-01e8b58d1d62.txt  8b28b316-649d-41a7-af06-336b244e3b86.txt  956f04e1-c456-4094-956d-6ac101b2b52b.txt  9f4be03f-4fa5-4db3-a819-07dfc033a734.txt  bcb6127b-564f-4a57-8165-99252b860847.txt  bf1b793a-34b1-4c59-8c3d-c396e1420652.txt  c111898f-1292-4a9e-bd7c-286ab7a03f82.txt  cad4289a-3b28-4186-8bf9-ed0f5901a98e.txt  cd1c9578-0c05-4b2e-b0ec-a6a630fc14e7.txt  cf881b86-2a40-465f-9484-95411e093253.txt  d5681f58-adc6-4f38-ac28-c444f850b986.txt  e3266ff9-8127-4e65-8ba2-6a672716d68d.txt  feef6661-4550-429e-9149-2f59b561ab50.txt  large_file.txt
docs/: alerting_system.md  canary_deployment.md  deployment_guide.md  disaster_recovery.md  distributed_orchestrator.md  enhanced_monitoring.md  kubernetes_deployment.md  load_balancer.md  monitoring_plan.md  observability.md  operations_guide.md  redis_caching.md  resilience_strategy.md  resource_quotas.md  scalability_design.md  security.md
docs/contracts/: git_agent.md  llm_router_agent.md  obsidian_agent.md
docs/runbooks/: deploy.md  incident_agent_failure.md  rollback.md
frontend/: debug_test.html  error_test.html  error_test_results.md  index.html  jest.config.cjs  package-lock.json  package.json  script.js  style.css  test-cases.json
frontend/coverage/: index.html  lcov.info  script.js.html
frontend/coverage/lcov-report/: index.html  script.js.html
frontend/tests/: error_handling.test.js  script.test.js  setup.js
k8s/canary/: deployment.yaml  health-validator.yaml  traffic-control.yaml
k8s/disaster-recovery/: deployment.yaml
k8s/monitoring/: alert-rules.yaml  alertmanager.yaml  grafana.yaml  logging-tracing.yaml  prometheus-operator.yaml
k8s/rollback/: deployment.yaml
tools/: security_scan.sh
tools/load_tester/: Cargo.toml
tools/load_tester/src/: main.rs
