[package]
name = "health-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
kube = { version = "0.78", features = ["runtime"] }
k8s-openapi = { version = "0.17", features = ["v1_26"] }
config = "0.13"
async-trait = "0.1"

[dependencies.prometheus-client]
version = "0.21"
features = ["protobuf"]