[package]
name = "master_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
toml = "0.8"
dotenvy = "0.15"
regex = "1"
sled = "0.34"
shared_types = { path = "../shared_types" }
