[package]
name = "master_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.2"
time = { version = "0.3", features = ["serde"] }
uuid = { workspace = true }
dashmap = "5.5"
governor = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { workspace = true }
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
actix-web-actors = "4"
actix = "0.13"
toml = "0.8"
dotenvy = "0.15"
regex = "1"
sled = "0.34"
jsonschema = "0.17"
chrono = { version = "0.4", features = ["clock"] }
shared_types = { path = "../shared_types" }
platform = { path = "../platform" }
tracing = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "api_benchmarks"
harness = false
