[package]
name = "rollback-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
kube = { version = "0.78", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17", features = ["v1_26"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"